# svt-av1-hdr

./: CMakeLists.txt  README.md  cmakelists.patch
Docs/: Appendix-Compound-Mode-Prediction.md  Appendix-Dynamic-Mini-GoP.md  Appendix-Intra-Block-Copy.md  Appendix-Local-Warped-Motion.md  Appendix-Mode-Decision.md  Appendix-Open-Loop-Motion-Estimation.md  Appendix-Overlapped-Block-Motion-Compensation.md  Appendix-Palette-Prediction.md  Appendix-Rate-Control.md  Appendix-Recursive-Intra.md  Appendix-Reference-Scaling.md  Appendix-Restoration-Filter.md  Appendix-SQ-Weight.md  Appendix-Super-Resolution.md  Appendix-Switch-Frame.md  Appendix-TPL.md  Appendix-TX-Search.md  Appendix-Variance-Boost.md  Parameters.md
Source/API/: EbConfigMacros.h  EbDebugMacros.h  EbSvtAv1.h  EbSvtAv1Enc.h
Source/App/: CMakeLists.txt  app_config.c  app_config.h  app_input_y4m.c  app_main.c  app_process_cmd.c
Source/Lib/: CMakeLists.txt
Source/Lib/ASM_AVX2/: temporal_filtering_avx2.c
Source/Lib/ASM_NEON/: CMakeLists.txt  av1_quantize_neon.c  sad_x4d_neon.c  variance_neon.c
Source/Lib/ASM_NEON_DOTPROD/: CMakeLists.txt  variance_neon_dotprod.c
Source/Lib/C_DEFAULT/: picture_operators_c.c
Source/Lib/Codec/: CMakeLists.txt  ac_bias.c  ac_bias.h  aom_dsp_rtcd.c  aom_dsp_rtcd.h  bitstream_unit.c  bitstream_unit.h  cabac_context_model.c  cabac_context_model.h  cdef_process.c  coding_loop.c  coding_unit.c  coding_unit.h  common_dsp_rtcd.c  common_dsp_rtcd.h  deblocking_filter.c  definitions.h  ec_process.c  ec_process.h  enc_cdef.c  enc_dec_process.c  enc_dec_process.h  enc_inter_prediction.c  enc_mode_config.c  enc_mode_config.h  encode_context.c  encode_context.h  entropy_coding.c  entropy_coding.h  full_loop.c  initial_rc_process.c  md_config_process.c  md_process.c  md_process.h  md_rate_estimation.c  mode_decision.c  neighbor_arrays.c  neighbor_arrays.h  noise_generation.c  noise_generation.h  (+35 more)
Source/Lib/Globals/: enc_handle.c  enc_handle.h  enc_settings.c
test/: BitstreamWriterTest.cc  CMakeLists.txt  QuantAsmTest.cc  quantize_func_test.cc  stylecheck.sh
test/benchmarking/: data_readers.py  encode.py
test/e2e_test/: ConfigEncoder.cc  SvtAv1E2EFramework.cc  SvtAv1E2ETest.cc
